modules/vpc/main.tf

# Create VPC
resource "aws_vpc" "my_vpc" {
 cidr_block     = "10.0.0.0/16"
 enable_dns_support = true
 enable_dns_hostnames = true
 tags = {
  Name = "My-VPC"
 }
}
# Create Subnets
resource "aws_subnet" "public_subnet" {
 vpc_id         = aws_vpc.my_vpc.id
 cidr_block       = "10.0.1.0/24"
 map_public_ip_on_launch = true
 tags = {
  Name = "Public-Subnet"
 }
}
resource "aws_subnet" "private_subnet" {
 vpc_id  = aws_vpc.my_vpc.id
 cidr_block = "10.0.2.0/24"
 tags = {
  Name = "Private-Subnet"
 }
}
# Create Internet Gateway
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.my_vpc.id
 tags = {
  Name = "My-Internet-Gateway"
 }
}
# Create Route Table for Public Subnet
resource "aws_route_table" "public_route_table" {
 vpc_id = aws_vpc.my_vpc.id
 route {
  cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
 }
 tags = {
  Name = "Public-Route-Table"
 }
}
